# cookie-to-auth

./: Main.hs  README.md  cookieToAuth.cabal  flake.nix
.github/workflows/: cabal.yml  docker.yml  nix.yml  release.yml
