cabal-version:       2.4

name:                cookieToAuth
version:             0.1.0.0
license:             AGPL-3.0-only
license-file:        LICENSE
author:              Kevin Mullins
maintainer:          kevin@pnotequalnp.com
copyright:           © 2020 Kevin Mullins
category:            Web

executable cookieToAuth
  main-is:             Main.hs
  build-depends:       base ^>=4.14.0.0
                     , bytestring
                     , cookie
                     , text
                     , http-client
                     , http-reverse-proxy
                     , http-types
                     , unliftio
                     , wai
                     , warp
  default-language:    Haskell2010
